# anime-tui

./: .dockerignore  .gitignore  Dockerfile  README.md  anishelf.py  bootstrap.py  build.ps1  fly.toml  install.sh  main.py  pyproject.toml  uninstall.sh  web_main.py
.github/workflows/: build.yml  ci.yml
.maestro/playbooks/Initiation/: Phase-03-UI-Polish-and-Enhanced-Features.md
app/application/: __init__.py  _cache.py  _concurrency.py  _executor.py  anime_service.py  catalog_resolver.py  catalog_service.py  constants.py  dtos.py  episode_aggregator.py  models.py  opening_mark_service.py  play_orchestration_service.py  security.py  service_facade.py  skip_times_service.py  stream_resolution_service.py  title_matcher.py  title_utils.py  watch_history_service.py  watch_later_service.py
app/application/interfaces/: __init__.py  ianilist_client.py  ianime_feed_reader.py  idependencies.py  isession_store.py  isource_discovery.py
app/domain/: __init__.py  anime.py  episode.py  play_context.py  season.py  watch_history.py  watch_later.py
app/infrastructure/: __init__.py  anilist_client.py  animesonline_feed_reader.py  aniskip_client.py  blogger_extractor.py  circuit_breaker.py  config.py  http_cache.py  http_retry.py  logging_config.py  player.py  security.py  stream_probe.py  stream_quality.py
app/infrastructure/player/: __init__.py  backends.py  base.py  download.py  open_video.py  registry.py
app/infrastructure/sessions/: stream_session_store.py
app/infrastructure/sources/: __init__.py  _base.py  _dooplay.py  _exemplo.py  _playback.py  _utils.py  animesonlinecc.py  animesonlinecloud.py  animeyabu.py  goyabu.py  source_discovery.py  topanimes.py
app/infrastructure/streaming/: hls_proxy.py  image_proxy.py
app/presentation/presenters/: __init__.py  anime_presenter.py  episode_presenter.py
app/presentation/screens/: __init__.py  (+6 more)
tests/: test_circuit_breaker.py  test_config.py  test_dtos.py  test_http_cache.py  test_security.py  test_title_matcher.py  test_title_utils.py  test_watch_history_service.py
web/: __init__.py  playback.py  serializers.py  server.py  stream_sessions.py
web/static/: index.html
(+80 files in other folders)
