[project]
name = "animes-tui"
version = "0.1.0"
description = "Cliente TUI para assistir animes no terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "textual>=2.1.0",
]

[project.scripts]
animes-tui = "main:main"
