[project]
name = "animes-tui"
version = "0.1.0"
description = "Cliente TUI e Web para assistir animes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.115.0",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "textual>=2.1.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
animes-tui = "main:main"
animes-web = "web_main:main"
