[project]
name = "animes-tui"
version = "0.1.0"
description = "Cliente TUI e Web para assistir animes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.115.0",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "textual>=2.1.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
animes-tui = "main:main"
animes-web = "web_main:main"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".ruff_cache", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
